--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dv-browser",
-  "version": "1.0.3",
+  "version": "2.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/druidvav/node-browser",
   "dependencies": {
-    "tough-cookie": "^2.3.2",
-    "node-libcurl": "^1.0.0"
+    "node-libcurl": "^2.0.2",
+    "tough-cookie": "^3.0.1"
   }
 }
